2003-09-25  Rodney Dawes  <dobey@ximian.com>

	* mail-send-recv.c: Make the dialog more HIG-compliant by fixing
	widget alignment/spacing issues, and removing separators

2003-09-24  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-preferences.c (mail_preferences_construct): Same as below.

	* mail-composer-prefs.c (mail_composer_prefs_construct): gconf can
	return empty string if the charset has not been set, so if the
	charset string is empty, default the charset to the user's locale
	charset. Partial fix for bug #47638.

2003-09-23  Jeffrey Stedfast  <fejj@ximian.com>

	* evolution-mbox-upgrade.c (get_local_store): Don't xmlFree (name)
	until after we've g_strdup'd it.
	(em_migrate_dir): If the metadata file doesn't exist, don't even
	bother trying subfolers (the shell just ignores them so we should
	too).

2003-09-23  Jeffrey Stedfast  <fejj@ximian.com>

	Fix for bug #48791 (and also fixes a FIXME)

	* em-format.c (emf_init): Setup a gconf listener for changes to
	the charset setting.
	(gconf_charset_changed): Update the cached gconf charset value.
	(emf_finalise): Free the EMFormatPrivate data, unref the gconf
	client, disconnect the charset notify id, and free the cached
	gconf charset value.
	(em_format_format_text): Use the cached gconf charset value.

2003-09-22  Not Zed  <NotZed@Ximian.com>

	** See bug #32996
	
	* mail-folder-cache.c (real_flush_updates): don't just pass TRUE
	to the 'can work offline' parameter of new shell folder.

	** See bug #39410
	
	* mail-ops.c (prep_offline_do): sync all messages, not just
	unread or flagged ones.

2003-09-22  Not Zed  <NotZed@Ximian.com>

	* em-popup.c (emp_uri_popup_link_copy): removed, moved to
	em-folder-view, for now, it has access to an invisible.

	* em-folder-view.c (emfv_setting_notify): honour the load_http
	setting, at least the all setting.
	(emfv_format_popup_event): setup the popup menu item for copy link
	location here.

2003-09-22  Jeffrey Stedfast  <fejj@ximian.com>
